Initial working version of helper method support

--- a/templates/dynamic.html
+++ b/templates/dynamic.html
@@ -5,7 +5,7 @@
         <p><img src="<%= inline.title.image %>" /></p>
         <img src="<%= image.banner %>" />
         <div id="dynamic_stuff">
-            <%= self.curr_date() %>
+            <%= curr_date %>
         </div>
   </body>
 </html>
