A little bit of additional example stuff.

--- a/example/pages/index.html.haml
+++ b/example/pages/index.html.haml
@@ -1,2 +1,8 @@
 %h2 What is Templette?
 %p Templette is intended to be a lightweight solution for creating and maintaining static pages.
+
+%h2 How do I Templette?
+%ul
+  %li sudo gem install templette
+  %li templette new-project
+  
