--- a/example/templates/main.html.haml
+++ b/example/templates/main.html.haml
@@ -9,6 +9,10 @@
       %a{:href=>'/'} Templette
       %a{:href=>'/rdoc'}Rdoc
       %a{:href=>'http://github.com/jdunphy/templette'}Source
+    .smallnav
+      %a{:href => '/pages.html'} Pages
+      %a{:href => '/templates.html'} Templates
+      %a{:href => '/tag-methods.html'} Tag Methods
     .content= body
     .footer
       Last updated:
