More example site stuff.  Renaming a page.

--- a/example/templates/main.html.haml
+++ b/example/templates/main.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Templette
+    %title Templette - a static templating framework
     = stylesheet_tag 'main', :rel => 'stylesheet', :media => 'all'
   %body
     %h1 Templette
@@ -12,7 +12,7 @@
     .smallnav
       %a{:href => '/pages.html'} Pages
       %a{:href => '/templates.html'} Templates
-      %a{:href => '/tag-methods.html'} Tag Methods
+      %a{:href => '/helpers.html'} Helpers
     .content= body
     .footer
       Last updated:
