Using a helper method as a part of the helpers example page.

--- a/example/pages/helpers.html.haml
+++ b/example/pages/helpers.html.haml
@@ -9,3 +9,7 @@
   %li image_tag
   %li stylesheet_tag
   %li script_tag
+
+%div
+  Here's the helper file for this example site.
+  = display_file('helpers/default_helper.rb')
